--- a/08-1 v-for과 v-if/VForVIf.html
+++ b/08-1 v-for과 v-if/VForVIf.html
@@ -14,7 +14,7 @@
     <ul>
       <!-- 
         동일한 노드에 두가지 모두 있다면, v-for가 v-if보다 높은 우선순위를 갖는다
-        v-if는 루프가 반복될 때마다 실행됩니다. 이는 일부 항목만 렌더링 하려는 경우 유용하다
+        v-if는 루프가 반복될 때마다 실행된다. 이는 일부 항목만 렌더링 하려는 경우 유용하다
        -->
       <li v-for="todo in todos" v-if="!todo.isComplete">
         {{ todo.content }}
