06 v-model: various input v-model

--- a/01/02 데이터 바인딩/1-Mustache.html
+++ b/01/02 데이터 바인딩/1-Mustache.html
@@ -13,10 +13,10 @@
 
 <body>
   <div id="app">
-    <!-- 누르면 value의 값을 증가시키는 메서드가 호출됩니다! -->
+    <!-- 누르면 value의 값을 증가시키는 메서드가 호출 -->
     <button @click="increase">값 증가</button>
-    <!-- {{ }} mustache를 사용하여 객체의 데이터와 바인딩합니다 -->
-    <!-- value 데이터의 값이 변경된다면 다시 템플릿을 렌더링합니다 -->
+    <!-- {{ }} mustache를 사용하여 객체의 데이터와 바인딩 -->
+    <!-- value 데이터의 값이 변경된다면 다시 템플릿을 렌더링 -->
     <h1>{{ value }}</h1>
   </div>
 </body>
@@ -29,7 +29,7 @@
     },
     methods: {
       increase() {
-        // 이 객체의 변수의 값을 증가시킵니다
+        // 이 객체의 변수의 값을 증가
         this.value++;
       }
     },
