--- a/01/02 데이터 바인딩/4-v-bind.html
+++ b/01/02 데이터 바인딩/4-v-bind.html
@@ -17,16 +17,16 @@
 
 <body>
   <div id="app">
-    <!-- href와 id속성에 데이터를 바인딩합니다 -->
+    <!-- href와 id속성에 데이터를 바인딩 -->
     <a v-bind:href="github">I have href</a>
     <p v-bind:id="dynamicId">I have Id</p>
 
-    <!-- v-bind와 v-on과 같은 많이 사용되는 디렉티브는 약어가 존재합니다 -->
+    <!-- v-bind와 v-on과 같은 많이 사용되는 디렉티브는 약어가 존재 -->
 
-    <!-- 아래는 v-bind의 약어입니다 -->
+    <!-- 아래는 v-bind의 약어이다 -->
     <a :href="github">I also have href</a>
 
-    <!-- v-on에 대한 설명은 후에 다룹니다 -->
+    <!-- v-on에 대한 설명은 후에 다룬다 -->
   </div>
 </body>
 
