--- a/01/07 컴포넌트/3-registerComponet3.html
+++ b/01/07 컴포넌트/3-registerComponet3.html
@@ -5,22 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>register global component</title>
+  <title>v-model</title>
 </head>
 
 <body>
   <div id="app">
     <my-component></my-component>
   </div>
-  
-  <!-- 루트 Vue 인스턴스가 없어서 렌더링되지 못한다 -->
-  <my-component></my-component>
 </body>
 
 <script src="https://unpkg.com/vue"></script>
+<!-- template타입의 script id를 부여하여 가져올 수 있다 -->
+<script type="text/template" id="template">
+  <div>사용자 정의 컴포넌트 입니다!</div>
+</script>
 <script>
-  var template= ('my-component', {
-    template: '<div>사용자 정의 컴포넌트 입니다!</div>'
+  // 복잡한 template을 다음과 같이 사용할 수 있다
+  Vue.component('my-component', {
+    template: '#template'
   })
 
   // 루트 인스턴스 생성
