--- a/01/07 컴포넌트/4-is.html
+++ b/01/07 컴포넌트/4-is.html
@@ -5,24 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>type/x-template</title>
+  <title>special attribute is</title>
 </head>
 
 <body>
   <div id="app">
-    <my-component></my-component>
+    <ul>
+      <!--
+      아래는 렌더링시 오류를 유발시킨다
+      <my-list></my-list>
+      -->
+      <!-- 따라서 아래와 같이 작성한다 -->
+      <li is="my-list"></li>
+    </ul>
   </div>
 </body>
 
 <script src="https://unpkg.com/vue"></script>
-<!-- template타입의 script id를 부여하여 가져올 수 있다 -->
-<script type="text/x-template" id="template">
-  <div>사용자 정의 컴포넌트 입니다!</div>
-</script>
 <script>
-  // 복잡한 template을 다음과 같이 사용할 수 있다
-  Vue.component('my-component', {
-    template: '#template'
+  var template= ('my-list', {
+    template: '<li>사용자 정의 컴포넌트 입니다!</li>'
   })
 
   // 루트 인스턴스 생성
