--- a/01/07 컴포넌트/4-is.html
+++ b/01/07 컴포넌트/4-is.html
@@ -23,7 +23,7 @@
 
 <script src="https://unpkg.com/vue"></script>
 <script>
-  var template= ('my-list', {
+  Vue.component('my-list', {
     template: '<li>사용자 정의 컴포넌트 입니다!</li>'
   })
 
