--- a/01/07 컴포넌트/11-nativeEvent.html
+++ b/01/07 컴포넌트/11-nativeEvent.html
@@ -12,7 +12,7 @@
   <div id="app">
     <!-- 
       v-on:click 을 컴포넌트에 속성으로 추가하면,
-      자식 컴포넌트에서 click이라는 메서드를 emit해야한다
+      자식 컴포넌트에서 click이라는 이벤트를 emit해야한다
       따라서 click.native와 같은 네이티브 수식어를 사용한다
      -->
     <my-component v-on:click.native="doTheThing"></my-component>
