--- a/01/07 컴포넌트/13-eventBus.html
+++ b/01/07 컴포넌트/13-eventBus.html
@@ -11,6 +11,14 @@
 <body>
   <div id="app">
 
+    <!--
+      자식-부모 관계가 아닌 경우지만
+      통신이 필요할 때가 있다
+      이때는 오히려 간단하게 이벤트 버스를 활용한다
+      * 이벤트 버스의 남발은 뷰의 특징 중 하나인
+      단방향 데이터 흐름을 무시하게 된다
+    -->
+
     <comp-a></comp-a>
     <comp-b></comp-b>
 
@@ -19,10 +27,12 @@
 
 <script src="https://unpkg.com/vue"></script>
 <script>
+  // 비어있는 Vue 인스턴스 생성
   var bus = new Vue();
 
   Vue.component('comp-a',{
     template: '<button @click="clickA">click me!</button>',
+    // 메서드를 통해 이벤트 발생
     methods: {
       clickA: function() {
         bus.$emit('countNumber',1);
@@ -37,6 +47,7 @@
       }
     },
     template: '<span>{{ number }}</span>',
+    // created훅에 이벤트 구독
     created() {
       bus.$on('countNumber',this.add);
     },
